# projects/automat-api/src/API/api.module.ts
@@ -7,6 +7,7 @@ import { ApiConfiguration, ApiConfigurationParams } from './api-configuration';
 import { AAnalyticsService } from './services/a-analytics.service';
 import { ABorrowInfoService } from './services/a-borrow-info.service';
 import { AConfCategoriesService } from './services/a-conf-categories.service';
+import { AdminLogShowService } from './services/admin-log-show.service';
 import { AItemService } from './services/a-item.service';
 import { AUserInforService } from './services/a-user-infor.service';
 import { AuthentificationService } from './services/authentification.service';
@@ -27,6 +28,7 @@ import { UQrCodeService } from './services/u-qr-code.service';
     AAnalyticsService,
     ABorrowInfoService,
     AConfCategoriesService,
+    AdminLogShowService,
     AItemService,
     AUserInforService,
     AuthentificationService,
