# projects/automat-api/src/API/models/log-qr-code-admin-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface LogQrCodeAdminDto {
+  borrowId?: null | number;
+  dateTime?: string;
+  id?: number;
+  scanned?: null | string;
+}
