# projects/automat-api/src/API/services.ts
@@ -1,6 +1,7 @@
 export { AAnalyticsService } from './services/a-analytics.service';
 export { ABorrowInfoService } from './services/a-borrow-info.service';
 export { AConfCategoriesService } from './services/a-conf-categories.service';
+export { AdminLogShowService } from './services/admin-log-show.service';
 export { AItemService } from './services/a-item.service';
 export { AUserInforService } from './services/a-user-infor.service';
 export { AuthentificationService } from './services/authentification.service';
